fixed header spacing issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,6 +143,12 @@ h1, h2, h3, h4, h5, h6 {
   max-height: 40px;
 }
 
+.header-spacer {
+  padding: 0px;
+  min-height: 75px;
+  margin: 0px;
+}
+
 /*--------------------------------------------------------------
 #  Get Startet Button
 --------------------------------------------------------------*/
@@ -654,6 +660,7 @@ section {
 /*--------------------------------------------------------------
 # Portfolio
 --------------------------------------------------------------*/
+
 .portfolio .portfolio-item {
   margin-bottom: 30px;
 }
@@ -757,6 +764,7 @@ section {
 .portfolio .portfolio-wrap:hover .portfolio-info {
   opacity: 1;
 }
+
 
 /*--------------------------------------------------------------
 # Portfolio Details
@@ -1168,50 +1176,6 @@ section {
   }
   100% {
     transform: rotate(360deg);
-  }
-}
-
-/*--------------------------------------------------------------
-# Breadcrumbs
---------------------------------------------------------------*/
-.breadcrumbs {
-  padding: 0;
-  /* background: whitesmoke; */
-  min-height: 40px;
-  margin-top: 74px;
-}
-.breadcrumbs h2 {
-  font-size: 28px;
-  font-weight: 400;
-}
-.breadcrumbs ol {
-  display: flex;
-  flex-wrap: wrap;
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-.breadcrumbs ol li + li {
-  padding-left: 10px;
-}
-.breadcrumbs ol li + li::before {
-  display: inline-block;
-  padding-right: 10px;
-  color: #2f2f2f;
-  content: "/";
-}
-@media (max-width: 992px) {
-  .breadcrumbs {
-    margin-top: 40px;
-  }
-  .breadcrumbs .d-flex {
-    display: block !important;
-  }
-  .breadcrumbs ol {
-    display: block;
-  }
-  .breadcrumbs ol li {
-    display: inline-block;
   }
 }
 
